param dos classifs

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1760,3 +1760,28 @@ year = {2015},
 journal = {Neurocomputing},
 note = {in press 2015},
 }
+
+@Book{books/daglib/0021593,
+  title =       "Introduction to information retrieval",
+  author =      "Christopher D. Manning and Prabhakar Raghavan and
+                 Hinrich Sch{\"u}tze",
+  publisher =   "Cambridge University Press",
+  year =        "2008",
+  bibdate =     "2011-03-16",
+  ISBN =        "978-0-521-86571-5",
+  pages =       "I--XXI, 1--482",
+}
+
+@Article{journals/ml/CortesV95,
+  title =       "Support-Vector Networks",
+  author =      "Corinna Cortes and Vladimir Vapnik",
+  journal =     "Machine Learning",
+  year =        "1995",
+  number =      "3",
+  volume =      "20",
+  bibdate =     "2011-05-26",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ml/ml20.html#CortesV95",
+  pages =       "273--297",
+  \URL =         "http://dx.doi.org/10.1007/BF00994018",
+}
