--- a/experimentos.tex
+++ b/experimentos.tex
@@ -75,7 +75,7 @@ VFDT teve o pior desempenho possivelmente por ser o único algoritmo incremental 
 e originalmente ter sido proposto para grandes quantidades de exemplos desde o primeiro
 treinamento. A acurácia passiva foi obtida após o treinamento incremental desde
 $|Y|$ até $|\mathcal{U}|$ exemplos, simulando o progresso de um aprendizado interativo.
-Devido a essa inadequação do cenário ao algoritmo, optou-se por excluí-lo dos
+Devido a essa inadequação do algoritmo ao cenário, optou-se por excluí-lo dos
 experimentos.
 
 A maior similaridade ($0,64$) ocorre entre ELM e CIELM conforme esperado.
