--- a/stratsALCKappaFriedNBRedux.tex
+++ b/stratsALCKappaFriedNBRedux.tex
@@ -1,21 +1,15 @@
 \begin{table}[h]
 \caption{Um contra um (NB). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-3 - \textbf{ATUeuc}	&   &   & - &   &   &   &   &   &   &   & + &   &   &   \\
-4 - \textbf{ATUman}	&   &   &   & - &   &   &   &   &   &   & * &   &   &   \\ \hline
-5 - \textbf{ATUmah}	&   &   &   &   & - &   &   &   &   &   &   &   &   &   \\
-6 - \textbf{GATUeuc}	& + &   &   &   &   & - &   &   &   &   & * &   &   & . \\ \hline
-7 - \textbf{GATUman}	& + &   &   &   &   &   & - &   &   &   & * &   &   & . \\
-8 - \textbf{GATUmah}	&   &   &   &   &   &   &   & - &   &   &   &   &   &   \\ \hline
-9 - \textbf{SGmulti}	&   &   &   &   &   &   &   &   & - &   & + &   &   &   \\
-10 - Mar  	&   &   &   &   &   &   &   &   &   & - &   &   &   &   \\ \hline
-11 - DWeuc	&   &   &   &   &   &   &   &   &   &   & - &   &   &   \\
-12 - TUeuc	&   &   &   &   &   &   &   &   &   &   &   & - &   &   \\ \hline
-13 - TUman	& . &   &   &   &   &   &   &   &   &   & * &   & - &   \\
-14 - TUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\
+1 - Rnd  	& - &   &   &   &   &   &   &   \\
+2 - Clu  	&   & - &   &   &   &   &   &   \\ \hline
+3 - \textbf{ATUmah}	&   &   & - &   &   &   &   &   \\
+4 - \textbf{HTUmah}	&   &   &   & - &   &   &   &   \\ \hline
+5 - \textbf{SGmulti}	&   &   &   &   & - &   &   &   \\
+6 - Mar  	&   &   &   &   &   & - &   &   \\ \hline
+7 - TUmah	&   &   &   &   &   &   & - &   \\
+8 - EERent	&   &   &   &   &   &   &   & - \\ \hline\end{tabular}
 \label{stratsALCKappaFriedNBRedux}
 \end{center}
 \end{table}
