--- a/experimentos.tex
+++ b/experimentos.tex
@@ -244,42 +244,7 @@ EERent  &   0.37 &   0.41 &   0.36 &   0.38 &   0.39 &   0.36 & \textcolor{red}{
 \input exp-analise
 
 
-\green{rodar eeg-eye-state pra medir tempo nas principais estrategias/learners,
-rodar como todas as outras, mas em 1x10-fold}
-\red{o tempo ficou sempre abaixo de 1s?, então está dentro do tolerable
-waiting time.
-Suponho que a demora do experimento se deva à inicialização das strats
-e não às consultas propriamente ditas.}
+não é do conhecimento do autor a existência de trabalhos que empreguem a medida de distância
+de Mahalanobis.
 
-
-\green{árvore do vencedor accbal e variancia}
-
-\green{árvore do perdedor accbal e variancia (considerar empates? = uma árvore por estrat.?)}
-
-\subsubsection{Comparativo}
-\green{friedmenyi de  accbal e variancia}
-
-\green{plotar accBal X budgets p/ cada uma das 15 bases com menos de
-200 exemplos?}
-
-\green{plotar p/ accBal (apenas nas 85 bases com mais de
-200 exemplos?)): \#topos-de-rank X budgets $[10;200]$
-Dois tipos de \#topos-de-rank:
-com empate = \#vezes em que ficou entre os vencedores
-sem empate = \#vezes em que foi o vencedor}
-
-
-É possível notar nas duas tabelas que a adoção da distância de Mahalanobis
-Apesar dessa particularidade e do alto desempenho reportado
-na próxima seção (\ref{analise}), não é do conhecimento do
-autor a existência de trabalhos que empreguem essa medida de distância.
-
-
-
-% copy
-% tostr
-% abr+learner
-% muda id e +convlid
-% põe no strats
-% põe id na lista
 
